ver.0.10: PostgreSQL依存関係追加

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 
     // Jakarta JSTL 実装
     implementation group: 'org.glassfish.web', name: 'jakarta.servlet.jsp.jstl', version: '3.+'
+    
+    // PO=stgreSQL JDBC
+    implementation 'org.postgresql:postgresql:42.7.3'
 
     // Mockito（テスト用）
     testImplementation 'org.mockito:mockito-junit-jupiter:5.+'
